- Cleaned up dead code - Implemented the Etag support - Split up theUserPreferenceController into a local and remote one - Fine-tuned the SelectDialog - Added a popup if the user selects a favorite and isn't logged in

--- a/core/src/main/flex/DukeConContext.mxml
+++ b/core/src/main/flex/DukeConContext.mxml
@@ -13,7 +13,8 @@
         <controller:SpeakerController/>
         <controller:TrackController/>
         <controller:SettingsController/>
-        <controller:UserPreferenceController baseUrl="{baseUrl}"/>
+        <controller:RemoteUserPreferencesController baseUrl="{baseUrl}"/>
+        <controller:LocalUserPreferencesController/>
     </fx:Declarations>
 
     <fx:Script>
