--- a/core/src/main/flex/DukeConApplication.mxml
+++ b/core/src/main/flex/DukeConApplication.mxml
@@ -2,7 +2,7 @@
 <s:TabbedViewNavigatorApplication
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        preinitialize="onPreinitialize(event)"
+        preinitialize="onPreInitialize(event)"
         applicationDPI="320" frameRate="60">
 
     <fx:Metadata>
@@ -25,12 +25,12 @@
         [Inject]
         public var settingsController:SettingsController;
 
-        protected function onPreinitialize(event:FlexEvent):void {
+        protected function onPreInitialize(event:FlexEvent):void {
             initLogging();
             FlexContextBuilder.build(DukeConContext, this);
         }
 
-        private function initLogging():void {
+        private static function initLogging():void {
             // Create a target.
             var logTarget:TraceTarget = new TraceTarget();
 
