--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -12,62 +12,68 @@
     </fx:Metadata>
 
     <fx:Declarations>
-        <parsley:FastInject injectionComplete="init();">
-            <parsley:Inject property="conferenceController" type="{ConferenceController}" />
-            <parsley:Inject property="userPreferenceController" type="{UserPreferenceController}" />
+        <parsley:FastInject injectionComplete="init()">
+            <parsley:Inject property="settingsController" type="{SettingsController}"/>
+            <parsley:Inject property="conferenceController" type="{ConferenceController}"/>
+            <parsley:Inject property="localUserPreferencesController" type="{LocalUserPreferencesController}"/>
         </parsley:FastInject>
+        <s:DateTimeFormatter id="timeFormatter"
+                             locale="{settingsController.selectedLanguage}"
+                             dateTimePattern="{resourceManager.getString('dukecon', 'dateTime.dateTime')}"/>
     </fx:Declarations>
 
     <fx:Script>
     <![CDATA[
         import org.dukecon.controller.ConferenceController;
-        import org.dukecon.controller.UserPreferenceController;
-        import org.dukecon.events.LoginChangedEvent;
+        import org.dukecon.controller.LocalUserPreferencesController;
+        import org.dukecon.controller.SettingsController;
+        import org.dukecon.events.ConferenceDataChangedEvent;
+
+        [Inject]
+        [Bindable]
+        public var settingsController:SettingsController;
 
         [Inject]
         public var conferenceController:ConferenceController;
 
         [Inject]
-        public var userPreferenceController:UserPreferenceController;
+        public var localUserPreferencesController:LocalUserPreferencesController;
 
         [Init]
-        public function init():void {
-//            loginButton.visible = authController && (authController.accessToken == null);
-//            logoutButton.visible = authController && (authController.accessToken != null);
+        protected function init():void {
+            conferenceController.addEventListener(
+                    ConferenceDataChangedEvent.CONFERENCE_DATA_CHANGED, handleConferenceDataChanged);
+            updateLastChangesDate();
         }
 
         [MessageHandler]
-        public function onLoginChanged(event:LoginChangedEvent):void {
-//            loginButton.visible = authController && (authController.accessToken == null);
-//            logoutButton.visible = authController && (authController.accessToken != null);
+        public function handleConferenceDataChanged(conferenceDataChanged:ConferenceDataChangedEvent):void {
+            updateLastChangesDate();
+        }
+
+        protected function updateLastChangesDate():void {
+            var lastUpdatedDate:Date = conferenceController.lastUpdatedDate;
+            if(lastUpdatedDate) {
+                lastCahngesValue.text = timeFormatter.format(lastUpdatedDate);
+            } else {
+                lastCahngesValue.text = resourceManager.getString('dukecon', 'main.never-loaded');
+            }
         }
 
         protected function onRefreshClicked(event:MouseEvent):void {
             conferenceController.updateEvents();
-//            if (authController.loggedIn) {
-//            userPreferenceController.readUserPreferences(navigator);
-//            }
         }
 
-        /*        protected function onLoginClicked(event:MouseEvent):void {
-         authController.login(navigator);
-         }
-
-         protected function onLogoutClicked(event:MouseEvent):void {
-         navigator.pushView(AuthView, "logout");
-         }*/
         ]]>
   </fx:Script>
 
-    <s:VGroup id="content" width="100%" height="100%" horizontalAlign="center">
+    <s:VGroup id="content" width="100%" height="100%" horizontalAlign="center" padding="20">
         <s:Image source="@Embed('/logo_javaland.png')" scaleMode="letterbox"/>
-        <s:VGroup height="100%" verticalAlign="middle">
+        <s:VGroup height="100%" verticalAlign="middle" horizontalAlign="center">
+            <s:Label text="{resourceManager.getString('dukecon', 'main.last-changes')}"/>
+            <s:Label id="lastCahngesValue"/>
             <s:Button id="refreshButton" label="{resourceManager.getString('dukecon', 'main.refresh')}"
                       click="onRefreshClicked(event)"/>
-            <!--s:Button id="loginButton" label="{resourceManager.getString('dukecon', 'main.login')}"
-                      click="onLoginClicked(event)"/>
-            <s:Button id="logoutButton" label="{resourceManager.getString('dukecon', 'main.logout')}"
-                      click="onLogoutClicked(event)"/-->
         </s:VGroup>
     </s:VGroup>
 
