--- a/core/src/main/flex/org/dukecon/views/MainView.mxml
+++ b/core/src/main/flex/org/dukecon/views/MainView.mxml
@@ -64,11 +64,17 @@
             conferenceController.updateEvents();
         }
 
+        protected function onLogoClicked(event:MouseEvent):void {
+            var localeParts:Array = resourceManager.localeChain[0].split("_");
+            var request:URLRequest=new URLRequest("https://www.javaland.eu/" + localeParts[0] + "/home/");
+            navigateToURL(request,"_blank");
+        }
+
         ]]>
   </fx:Script>
 
     <s:VGroup id="content" width="100%" height="100%" horizontalAlign="center" padding="20">
-        <s:Image source="@Embed('/logo_javaland.png')" scaleMode="letterbox"/>
+        <s:Image source="@Embed('/logo_javaland.png')" scaleMode="letterbox" click="onLogoClicked(event)"/>
         <s:VGroup height="100%" verticalAlign="middle" horizontalAlign="center">
             <s:Label text="{resourceManager.getString('dukecon', 'main.last-changes')}"/>
             <s:Label id="lastCahngesValue"/>
